fix md-dialog on mobile

--- a/public/stylesheet/css/app.css
+++ b/public/stylesheet/css/app.css
@@ -16,6 +16,9 @@ body {
 .w-200 {
     width: 200px; }
 
+.md-dialog-container {
+    height: 100% !important;
+}
 
 .main-view {
     position: absolute;
